# Alenka-File

./: .gitignore  CMakeLists.txt  README.md  download-libraries.sh
include/: datafile.h  edf.h  gdf2.h  libgdf.h
include/Alenka-File/: datafile.h  edf.h  gdf2.h  libgdf.h
include/AlenkaFile/: abstractdatamodel.h  datafile.h  datamodel.h  edf.h  gdf2.h  libgdf.h  mat.h
src/: datafile.cpp  datamodel.cpp  edf.cpp  edflib_extended.cpp  edflib_extended.h  gdf2.cpp  libgdf.cpp  mat.cpp
unit-test/: CMakeLists.txt  common.h  data_model_test.cpp  primary_file_test.cpp
unit-test/data/: .gitignore  data.md5  data0.md5  download-data.sh
